# sample-data

./: README.md  setup.cfg  setup.py
dispatches_sample_data/: __init__.py
dispatches_sample_data/rts_gmlc/SourceData/: timeseries_pointers.csv
dispatches_sample_data/rts_gmlc/timeseries_data_files/: README.md
