[metadata]
name = dispatches-sample-data
version = 22.06.23
description = Sample datasets for the DISPATCHES project
keywords = 
    RTS-GMLC
    Reliability Test System
    Grid Modernization Lab Consortium
license = Other

[options]
zip_safe = False
include_package_data = True
packages= find:

[options.package_data]
# we should try to be as granular as possible in declaring the data files here
# to e.g. make sure that the appropriate license file is present
dispatches_sample_data.rts_gmlc = 
    LICENSE.md
    branch.csv
    bus.csv
    dc_branch.csv
    gen.csv
    reserves.csv
    simulation_objects.csv
    storage.csv
    timeseries_pointers.csv
